--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -5,9 +5,12 @@
 
     <data>
 
+        <import type="com.softhouse.workingout.ui.sensor.tracker.Mode"/>
         <variable
                 name="mode"
                 type="com.softhouse.workingout.ui.sensor.tracker.Mode"/>
+
+
 
     </data>
 
