first run scheduler

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,8 +17,8 @@
             android:title="History"/>
 
     <item
-            android:id="@+id/navigation_notifications"
+            android:id="@+id/alarmFragment"
             android:icon="@drawable/outline_analytics_24"
-            android:title="@string/title_notifications"/>
+            android:title="@string/alarms"/>
 
 </menu>
