--- a/app/src/main/res/layout/fragment_cycling_logs.xml
+++ b/app/src/main/res/layout/fragment_cycling_logs.xml
@@ -6,28 +6,25 @@
     <data>
         <variable
                 name="data"
-                type="com.softhouse.workingout.data.db.Cycling"/>
+                type="com.softhouse.workingout.ui.log.dto.CyclingDTO"/>
     </data>
 
     <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             app:cardCornerRadius="15dp"
             app:cardUseCompatPadding="true"
     >
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
+                android:background="@color/lightBlueSecondary"
         >
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@color/lightBlueSecondary"
-                    android:orientation="vertical"
-                    android:layout_margin="0dp"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
             >
                 <ImageView
                         android:layout_width="match_parent"
@@ -39,157 +36,91 @@
 
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:layout_margin="0dp"
-                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="25dp"
             >
-                <LinearLayout
-                        android:layout_width="75dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/lightBlueSecondary"
-                >
-                    <com.google.android.material.card.MaterialCardView
-                            android:layout_width="75dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-                            app:cardCornerRadius="5dp"
-                            app:cardUseCompatPadding="true"
-
-                    >
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:background="@color/lightBlue"
-                        >
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:orientation="horizontal"
-                            >
-                                <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        app:srcCompat="@drawable/outline_hourglass_bottom_24"
-                                >
-                                </ImageView>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                            >
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-                </LinearLayout>
-
-                <LinearLayout
+                <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/lightBlueSecondary"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="5dp"
+                        app:cardUseCompatPadding="true"
                 >
-                    <com.google.android.material.card.MaterialCardView
-                            android:layout_width="75dp"
+                    <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-
-                            app:cardCornerRadius="5dp"
-                            app:cardUseCompatPadding="true"
+                            android:orientation="horizontal"
+                            android:background="@color/lightBlue"
                     >
+                        <LinearLayout
+                                android:layout_width="50dp"
+                                android:layout_height="match_parent"
+                        >
+                            <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="30dp"
+                                    android:layout_gravity="center_vertical"
+                                    app:srcCompat="@drawable/outline_directions_walk_24"
+                            >
+                            </ImageView>
+                        </LinearLayout>
                         <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:background="@color/lightBlue"
                         >
-                            <LinearLayout
+                            <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:lines="1"
+                                    android:textSize="20sp"
+                                    android:text='@{`` + data.distance + " m"}'>
+                            </TextView>
+                        </LinearLayout>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="5dp"
+                        app:cardUseCompatPadding="true"
+                >
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:background="@color/lightBlue"
+                    >
+                        <LinearLayout
+                                android:layout_width="50dp"
+                                android:layout_height="match_parent"
+                        >
+                            <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="30dp"
-                                    android:orientation="horizontal"
+                                    android:layout_gravity="center_vertical"
+                                    app:srcCompat="@drawable/outline_hourglass_bottom_24"
                             >
-                                <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="30dp"
-                                        android:layout_gravity="center_vertical"
-                                        app:srcCompat="@drawable/outline_moving_24"
-                                >
-                                </ImageView>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                            >
-                                <TextView
-                                        android:id="@+id/text_detail"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:gravity="center"
-                                        android:lines="1"
-                                        android:textSize="24sp"
-                                        android:text='@{`` + data.distanceInMeters + " m"}'>
-                                </TextView>
-                            </LinearLayout>
-
+                            </ImageView>
                         </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-                </LinearLayout>
+                        <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                        >
+                            <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:lines="1"
+                                    android:textSize="20sp"
+                                    android:text='@{`` + data.duration}'>
+                            </TextView>
+                        </LinearLayout>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
             </LinearLayout>
 
         </LinearLayout>
-
-
     </com.google.android.material.card.MaterialCardView>
-
-<!--    <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="90dp"-->
-<!--            android:orientation="horizontal">-->
-
-<!--        <ImageView-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:layout_width="90dp"-->
-<!--                android:layout_height="90dp"-->
-<!--                app:srcCompat="@drawable/bike"-->
-<!--                />-->
-
-<!--        <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical">-->
-
-<!--            <TextView-->
-<!--                    android:id="@+id/text_title"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:layout_margin="8dp"-->
-<!--                    android:lines="1"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:textSize="24sp"-->
-<!--                    android:text='@{`` + data.distanceInMeters + " m"}'/>-->
-
-<!--            <TextView-->
-<!--                    android:id="@+id/text_detail"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:layout_margin="8dp"-->
-<!--                    android:lines="1"-->
-<!--                    android:textSize="16sp"-->
-<!--                    android:text='@{`` + data.distanceInMeters + " m"}'/>-->
-
-<!--            <View-->
-<!--                    style="@style/Divider"-->
-<!--                    android:id="@+id/divider"-->
-<!--                    android:layout_marginTop="@dimen/text_margin"/>-->
-
-<!--        </LinearLayout>-->
-
-
-<!--    </LinearLayout>-->
 </layout>
