--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -12,7 +12,7 @@
         app:layoutManager="LinearLayoutManager"
         tools:context=".ui.news.NewsList"
         tools:listitem="@layout/fragment_news_item"
-        android:background="#FFFFFF"
+        android:background="@color/blueGrayDarkVariant"
         tools:actionBarNavMode="standard"
         android:paddingTop="8dp"
         />
