--- a/app/src/debug/res/values/themes.xml
+++ b/app/src/debug/res/values/themes.xml
@@ -19,7 +19,7 @@
         </item>
     </style>
 
-    <style name="Base.Theme.App" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Base.Theme.App" parent="Theme.MaterialComponents.Light">
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
@@ -44,6 +44,7 @@
 
     <style name="TextAppearance.MaterialComponents.Headline6.Custom" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/grayLight</item>
     </style>
 
     <style name="DaysTextViewStyle">
@@ -231,5 +232,7 @@
         <item name="android:insetTop">0dp</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Caption</item>
     </style>
+
+
 
 </resources>
