--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,13 +25,14 @@
             android:id="@+id/nav_view"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/navbar"
+            android:background="@drawable/alarm_slider_background"
             android:elevation="8dp"
             android:translationY="-20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu"
-            android:visibility="visible"/>
+            android:visibility="visible"
+            app:itemIconTint="@drawable/bottom_navigation_selector"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
