--- a/app/src/main/res/layout/fragment_detail_cycling_pane.xml
+++ b/app/src/main/res/layout/fragment_detail_cycling_pane.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text='No Content'
+                android:textColor="@color/grayLight"
                 android:visibility="@{show ? View.GONE : View.VISIBLE}"
                 android:layout_margin="@dimen/text_margin"
                 android:textSize="24sp"
@@ -63,12 +64,14 @@
                         android:visibility="@{show ? View.VISIBLE : View.GONE}"
                         android:textSize="28sp"
                         android:layout_weight="0.2"
+                        android:textColor="@color/grayLight"
                         android:textStyle="bold"
                         android:textAlignment="textEnd"/>
 
                 <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
+                        android:textColor="@color/grayLight"
                         android:text=" meter(s)"
                         android:visibility="@{show ? View.VISIBLE : View.GONE}"
                         android:textSize="14sp"
