--- a/app/src/main/res/layout/fragment_detail_running_pane.xml
+++ b/app/src/main/res/layout/fragment_detail_running_pane.xml
@@ -37,12 +37,14 @@
                     android:text='No Content'
                     android:visibility="@{show ? View.GONE : View.VISIBLE}"
                     android:layout_margin="@dimen/text_margin"
+                    android:textColor="@color/grayLight"
                     android:textSize="24sp"
                     android:textAlignment="center"/>
 
             <TextView
                     android:id="@+id/text_duration"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/grayLight"
                     android:layout_width="wrap_content"
                     android:text='@{dto.duration}'
                     android:visibility="@{show ? View.VISIBLE : View.GONE}"
@@ -60,6 +62,7 @@
                     android:layout_margin="@dimen/text_margin"
                     android:textSize="24sp"
                     android:layout_weight="0.25"
+                    android:textColor="@color/grayLight"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     app:autoSizeMinTextSize="28sp"
@@ -73,6 +76,7 @@
                     android:text="step(s)"
                     android:visibility="@{show ? View.VISIBLE : View.GONE}"
                     android:textSize="24sp"
+                    android:textColor="@color/grayLight"
                     android:layout_weight="0.25"
                     android:textAlignment="center"
                     android:layout_margin="@dimen/activity_horizontal_margin"/>
