--- a/app/src/main/res/layout/fragment_cycling_logs.xml
+++ b/app/src/main/res/layout/fragment_cycling_logs.xml
@@ -23,8 +23,9 @@
                 android:background="@color/lightBlueSecondary"
         >
             <LinearLayout
-                    android:layout_width="120dp"
+                    android:layout_width="60dp"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
             >
                 <ImageView
                         android:layout_width="match_parent"
