--- a/app/src/main/res/layout/fragment_running_logs.xml
+++ b/app/src/main/res/layout/fragment_running_logs.xml
@@ -25,8 +25,9 @@
                 android:background="@color/lightBlueSecondary"
         >
             <LinearLayout
-                    android:layout_width="120dp"
+                    android:layout_width="60dp"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
             >
                 <ImageView
                     android:layout_width="match_parent"
@@ -76,7 +77,7 @@
                                     android:gravity="center"
                                     android:lines="1"
                                     android:textSize="20sp"
-                                    android:text='@{`` + data.steps + " STEPS"}'>
+                                    android:text='@{`` + data.steps + " steps"}'>
                             </TextView>
                         </LinearLayout>
                     </LinearLayout>
